--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Telegram Refer and Earn Bot",
   "dependencies": {
-    "@supabase/supabase-js": "^2.56.1",
-    "dotenv": "^17.2.1",
+    "@supabase/supabase-js": "^2.44.4",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
